# sdqctl

./: .gitignore  .sdqctlignore  .summary.txt  COPILOT-SDK-INTEGRATION.md  FEEDBACK-RESPONSE.md  INTEGRATION-PROPOSAL.md  INTEGRATION-SUMMARY.md  PROPOSAL-EVALUATION.md  README.md  SDQCTL-PROPOSAL.md  SLASH_COMMANDS.md  STOPAUTOMATION-19cb7b330aaa.json  documentation-sync-report.md  pyproject.toml  test-consult.sh  test-loop-stress.sh
benchmarks/: README.md  __init__.py  bench_parsing.py  bench_rendering.py  bench_sdk.py  bench_workflow.py  run.py
consult-test-logs/: consult-test-summary-2026-01-25-125323.md  consult-test-summary-2026-01-25-125348.md  consult-test-summary-2026-01-25-125626.md
docs/: ADAPTERS.md  AVAILABLE-TOOLS.md  CODE-QUALITY.md  COLOPHON.md  COMMANDS.md  CONTEXT-MANAGEMENT.md  DIRECTIVE-REFERENCE.md  EXTENDING-VERIFIERS.md  FEATURE-INTERACTIONS.md  GETTING-STARTED.md  GLOSSARY.md  IO-ARCHITECTURE.md  ITERATION-PATTERNS.md  LOOP-STRESS-TEST.md  NIGHTSCOUT-ECOSYSTEM.md  OPEN-QUESTIONS.md  PHILOSOPHY.md  PIPELINE-SCHEMA.md  PLUGIN-AUTHORING.md  QUIRKS.md  REVERSE-ENGINEERING.md  SDK-FEATURE-INVENTORY.md  SDK-LEARNINGS.md  SECURITY-MODEL.md  SUBPROJECT-TOOLING.md  SYNTHESIS-CYCLES.md  TRACEABILITY-WORKFLOW.md  TROUBLESHOOTING.md  VALIDATION-WORKFLOW.md  WORKFLOW-DESIGN.md  directives-schema.json  metrics-schema.json
proposal/: INDEX.md  NIGHTSCOUT-GIT-WORKFLOW-ANALYSIS.md  PROPOSAL-CONDENSED.md  QUICK-START.md
proposals/: AGENTIC-ANALYSIS.md  ARTIFACT-TAXONOMY.md  BACKLOG.md  COMPACTION-UNIFICATION.md  CONTEXT-DEPRECATION.md  CONTINUOUS-MONITORING.md  HELP-INLINE.md  ITERATE-CONSOLIDATION.md  LSP-INTEGRATION.md  MODEL-REQUIREMENTS.md  PIPELINE-ARCHITECTURE.md  PLUGIN-SYSTEM.md  REFCAT-DESIGN.md  RPC-BACKED-DIRECTIVES.md  RUN-BRANCHING.md  RUN-RENAME-ANALYSIS.md  SDK-ECONOMY.md  SDK-METADATA-APIS.md  SDK-SESSION-PERSISTENCE.md  SESSION-ANALYTICS.md  STPA-DEEP-INTEGRATION.md  UPSTREAM-CONTRIBUTIONS.md  (+1 more)
(+429 files in other folders)
