[project]
name = "sdqctl"
version = "0.1.0"
description = "Software Defined Quality Control - Vendor-agnostic AI workflow orchestration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ben West", email = "bewest@gmail.com" }
]
keywords = ["ai", "copilot", "workflow", "orchestration", "quality-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
copilot = [
    "github-copilot-sdk>=0.1.0",
]
anthropic = [
    "anthropic>=0.20.0",
]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
all = [
    "sdqctl[copilot,anthropic,openai,dev]",
]

[project.scripts]
sdqctl = "sdqctl.cli:main"

[project.urls]
Homepage = "https://github.com/bewest/copilot-do-proposal"
Repository = "https://github.com/bewest/copilot-do-proposal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdqctl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use adapters, file I/O)",
    "slow: Slow tests (>1s execution time)",
]
